# novadesk

./: .gitignore  BUILDING.md  Build.ps1  CMakeLists.txt  CopyItems.ps1  Element.cpp  Novadesk-Project.sln  Novadesk.rc  Novadesk.vcxproj  Novadesk.vcxproj.filters  Project.sln  README.md  Run.ps1  Setup.ps1  VersionBump.ps1  VersionBump.txt  index.js
.github/workflows/: build.yml
Libuv/x64/: libuv.lib
Libuv/x86/: libuv.lib
Tests/AddonAPI/: index.js
Tests/AppObject/: index.js
Tests/AppVolumeAPI/: index.js
Tests/AudioTest/: index.js
Tests/BarElement/: index.js  ui.js
Tests/ClipboardAPI/: index.js
Tests/CursorTest/: ui.js
Tests/DisplayMetrics/: index.js
Tests/ExecuteCommand/: index.js
Tests/FsAPI/: index.js
Tests/ImageElement/: ui.js
Tests/JSONAPI/: index.js  output_test.json  verify.json
Tests/PowerAPI/: index.js
Tests/RegistryAPI/: index.js
Tests/RoundLineElement/: ui.js
Tests/ShapeTest/: index.js
Tests/TextElement/: fontGradient.js  index.js  inlineStyle.js  ui.js
Tests/UnifiedGradientTest/: ui.js
Widgets/: config.json  imageTest.js  index.js  solidColorTest.js  systemTest.js  testIndependentRefresh.js  testWidget.js  timerDemo.js  verifyLogFix.js  widgetB_ui.js
Widgets/assets/: test_path.js
Widgets/clock/: clock.js
Widgets/src/clockWidget/: main.js
Widgets/src/common/: utils.js
Widgets/src/networkWidget/: main.js
Widgets/src/systemWidget/: main.js
Widgets/src/weatherWidget/: main.js
Widgets/system/: system.js
Widgets/test/: index.js  test_ui.js
Widgets/tests/: testBackgroundColor.js  testDisplayMatrics.js  testNewApiSyntax.js  testNewElementApi.js  testSystemMatrics.js  testWidgetProperties.js
Widgets/welcome/: welcome.js
apps/novadesk/: Novadesk.vcxproj  Novadesk.vcxproj.filters
installer/: setup.nsi
installer_stub/: installer_stub.rc  installer_stub.vcxproj
installer_stub/src/: installer_stub.cpp
nwm/: nwm.rc  nwm.vcxproj
nwm/src/: main.cpp
nwm/widget/: meta.json
src/Widgets/: meta.json
src/Widgets/InputBoxDemo/: index.js  meta.json
src/Widgets/builtin/: main.js
src/Widgets/template/: index.js  meta.json
src/addons/: NovadeskAddon.props
src/addons/AudioLevel/: AudioLevel.vcxproj  AudioLevel.vcxproj.filters
src/addons/InputBox/: InputBox.rc  InputBox.vcxproj  InputBox.vcxproj.filters  main.cpp  resource.h
src/apps/installer_stub/: installer_stub.rc  installer_stub.sln  installer_stub.vcxproj
src/apps/manage_novadesk/: main.cpp  manage_novadesk.rc  manage_novadesk.vcxproj
src/apps/ndpkg_installer/: main.cpp  ndpkg_installer.vcxproj
src/apps/novadesk/: Novadesk.rc  Novadesk.vcxproj  Novadesk.vcxproj.filters  Resource.h  Version.h  main.cpp  novadesk.vcxproj  novadesk.vcxproj.filters
src/apps/nwm/: nwm.rc  nwm.sln  nwm.vcxproj
src/apps/restart_novadesk/: restart_novadesk.vcxproj
tests/integrations/AnimationApiTest/: index.js  script.ui.js
tests/integrations/AnimationKeyframesTest/: script.ui.js
tests/integrations/AnimationTextTest/: script.ui.js
tests/integrations/AppObject/: index.js
tests/integrations/AppVolumeAPI/: index.js
tests/integrations/AreaGraph/: script.ui.js
tests/integrations/AudioAPI/: index.js
tests/integrations/AudioLevelTest/: index.js  script.ui.js
tests/integrations/BackgroundTest/: index.js  script.ui.js
tests/integrations/BarElement/: hittest.ui.js  index.js  script.ui.js
tests/integrations/BatteryBitmap/: script.ui.js
tests/integrations/BitmapElement/: script.ui.js
tests/integrations/BrightnessAPI/: index.js
tests/integrations/CPUMonitor/: index.js
tests/integrations/ClipboardAPI/: index.js
tests/integrations/ContainerTest/: index.js  script.ui.js
tests/integrations/CursorTest/: index.js  script.ui.js
tests/integrations/DiskMonitor/: index.js
tests/integrations/DisplayMetrics/: index.js
tests/integrations/EnvironmentVariables/: index.js
tests/integrations/ExecuteCommand/: index.js
tests/integrations/FocusTest/: index.js  script.ui.js
tests/integrations/FsAPI/: index.js
tests/integrations/GlobalVariablesTest/: index.js  script.ui.js
tests/integrations/GroupTest/: index.js  script.ui.js
tests/integrations/HistogramElement/: script.ui.js
tests/integrations/HitTest/: hitTest.ui.js  index.js
tests/integrations/IPC/: index.js
tests/integrations/IconExtractAPI/: index.js
tests/integrations/ImageElement/: index.js  script.ui.js  widget.ui.js
tests/integrations/InputBox/: index.js
tests/integrations/InputBoxDemo/: index.js
tests/integrations/InputBoxGradientTest/: index.js  meta.json  script.ui.js
tests/integrations/JSONAPI/: index.js  merge_base.json  output_test.json  verify.json
tests/integrations/LayoutApiTest/: script.ui.js
tests/integrations/LayoutApiTest(AlignItems)/: index.js  script.ui.js
tests/integrations/LayoutBoxBorderTest/: dashed.ui.js  index.js  script.ui.js
tests/integrations/LayoutBoxDisplayTest/: index.js  script.ui.js
tests/integrations/LineElement/: index.js  script.ui.js
tests/integrations/MemoryMonitor/: index.js
tests/integrations/MessageBox/: index.js
tests/integrations/MouseEventAliases/: index.js  script.ui.js
tests/integrations/MouseMonitor/: index.js
tests/integrations/NowPlayingMonitor/: index.js
tests/integrations/OnlineFontTest/: index.js  script.ui.js
tests/integrations/OnlineUiScript/: index.js  meta.json  script.ui.js
tests/integrations/PowerAPI/: index.js
tests/integrations/RecycleBinAPI/: index.js
tests/integrations/RegisterHotkey/: index.js
tests/integrations/RegistryAPI/: index.js
tests/integrations/RequireTest/: index.js  moduleA.js  moduleB.js
tests/integrations/RoundLineElement/: index.js  script.ui.js
tests/integrations/SetWallpaper/: index.js
tests/integrations/ShapeTest/: arc.ui.js  basic.ui.js  combine.ui.js  curve.ui.js  ellipse.ui.js  index.js  path.ui.js  script.ui.js  shape_ui.js  strokes.ui.js
tests/integrations/TextElement/: case.js  fontEffect.js  fontGradient.js  fontPath.js  fontPath.ui.js  fontWeight.js  index.js  inlineStyle.js  inlineStyle.ui.js  script.ui.js  ui.js
tests/integrations/TimeAPI/: index.js
(+258 files in other folders)
